# vane

./: .gitignore  CMakeLists.txt  README.md
docs/: architecture.md  design.md  platform-support.md
spikes/: CMakeLists.txt  README.md
spikes/001-clang-interpreter-fork/: README.md  main.cpp
spikes/002-fork-codegen-object/: README.md  driver.cpp  main.cpp
spikes/002-fork-codegen-object/normal/: a.cpp  b.cpp  prefix.cpp
spikes/003-fork-large-prefix/: README.md  driver.cpp  main.cpp
spikes/003-fork-large-prefix/baseline/: common.h  tu_0.cpp  tu_1.cpp  tu_2.cpp  tu_3.cpp  tu_4.cpp  tu_5.cpp
spikes/004-vane-vs-pch/: README.md  main.cpp
spikes/004-vane-vs-pch/scripts/: bench_all.sh  bench_opt.sh  bench_pch.sh  run_vane.sh  verify.sh  verify_opt.sh
src/: main.cpp
